Back-end: continued with swagger
